@@ -1,0 +1,2 @@
+78 0 0 0 1753088 60 198 1024 0 0 255 0
+156 1 0 0 1753088 60 198 1024 0 13 255 0
